WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215130
Align AudioBufferSourceNode's start() / stop() with the specification
https://bugs.webkit.org/show_bug.cgi?id=215130
Summary
Align AudioBufferSourceNode's start() / stop() with the specification
Chris Dumez
Reported
2020-08-04 10:26:37 PDT
Align AudioBufferSourceNode's start() / stop() with the specification: -
https://www.w3.org/TR/webaudio/#dom-audiobuffersourcenode-start
-
https://www.w3.org/TR/webaudio/#dom-audioscheduledsourcenode-stop
Attachments
Patch
(12.74 KB, patch)
2020-08-04 10:30 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(12.74 KB, patch)
2020-08-04 11:03 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-08-04 10:30:09 PDT
Created
attachment 405927
[details]
Patch
Darin Adler
Comment 2
2020-08-04 10:38:46 PDT
Comment on
attachment 405927
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=405927&action=review
> Source/WebCore/Modules/webaudio/AudioBufferSourceNode.cpp:474 > + return Exception { InvalidStateError, "Cannot call start more than once." };
Missing _s?
Chris Dumez
Comment 3
2020-08-04 11:03:38 PDT
Created
attachment 405931
[details]
Patch
EWS
Comment 4
2020-08-04 12:27:03 PDT
Committed
r265256
: <
https://trac.webkit.org/changeset/265256
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405931
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-08-04 12:28:21 PDT
<
rdar://problem/66536155
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug