Align AudioBufferSourceNode's start() / stop() with the specification https://bugs.webkit.org/show_bug.cgi?id=215130

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline a couple of web-platform-tests now that they are passing.

* web-platform-tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/audiobuffersource-basic-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/audiobuffersource-grain-expected.txt:

Source/WebCore:

Align AudioBufferSourceNode's start() / stop() with the specification:
- https://www.w3.org/TR/webaudio/#dom-audiobuffersourcenode-start
- https://www.w3.org/TR/webaudio/#dom-audioscheduledsourcenode-stop

In particular, we should throw a RangeError when the parameters are invalid,
not an InvalidStateError. Also, we should not return early if there is no
buffer.

No new tests, rebaselined existing tests.

* Modules/webaudio/AudioBufferSourceNode.cpp:
(WebCore::AudioBufferSourceNode::startPlaying):
* Modules/webaudio/AudioScheduledSourceNode.cpp:
(WebCore::AudioScheduledSourceNode::startLater):
(WebCore::AudioScheduledSourceNode::stopLater):

LayoutTests:

Rebaseline test because exception message changed.

* webaudio/audiobuffersource-exception-expected.txt:


Canonical link: https://commits.webkit.org/227938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265256 268f45cc-cd09-0410-ab3c-d52691b4dbfc